26-06-2026 Add a new finalize declarative routing, JWT security and tracing filters for Saga architecture.